@@ -2,6 +2,21 @@
 # Creation of bundles
 #
 
+# Standard make convention variables/locations
+prefix         ?= /usr/local
+exec_prefix    ?= $(prefix)
+datarootdir    ?= $(prefix)/share
+datadir        ?= $(datarootdir)
+
+bindir         ?= $(exec_prefix)/bin
+mandir         ?= $(datarootdir)/man
+man1dir        ?= $(mandir)/man1
+docdir         ?= $(datarootdir)/doc/$(PACKAGE_NAME)
+
+openttddir     ?= $(datarootdir}/openttd
+openttdgmdir   ?= $(openttddir)/gm/$(PACKAGE_NAME)
+openttddatadir ?= $(openttddir)/data/$(PACKAGE_NAME)
+
 ifeq (${V},1)
 VERBOSE := 1
 endif
@@ -32,26 +47,37 @@ bundle: release
 	$(_C)cp $(GRFMERGE)        "$(BUNDLE_DIR)/"
 	$(_C)cp $(GRFID)           "$(BUNDLE_DIR)/"
 	$(_C)cp COPYING            "$(BUNDLE_DIR)/COPYING"
-	$(_C)cp changelog.txt      "$(BUNDLE_DIR)/docs/"
+	$(_C)cp changelog.txt      "$(BUNDLE_DIR)/"
 	$(_C)cp docs/*.txt         "$(BUNDLE_DIR)/docs/"
 	$(_C)cp docs/*.1           "$(BUNDLE_DIR)/man/"
 	$(_C)gzip -9               "$(BUNDLE_DIR)/man/"*.1
 ifeq ($(GRFCODEC), grfcodec.exe)
-	$(_C)unix2dos "$(BUNDLE_DIR)/docs/"*.txt "$(BUNDLE_DIR)/COPYING"
+	$(_C)unix2dos "$(BUNDLE_DIR)/docs/"*.txt "$(BUNDLE_DIR)/COPYING" "$(BUNDLE_DIR)/changelog.txt"
 endif
 
 install: bundle
 	@echo '[INSTALL] Installing NFORenum'
-	$(_C)install -d "$(INSTALL_DOCS_DIR)"
-	$(_C)install -d "$(INSTALL_BINARY_DIR)"
-	$(_C)install -d "$(INSTALL_MAN_DIR)"
-	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFCODEC)" "$(INSTALL_BINARY_DIR)/"
-	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFMERGE)" "$(INSTALL_BINARY_DIR)/"
-	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFDIFF)" "$(INSTALL_BINARY_DIR)/"
-	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFID)" "$(INSTALL_BINARY_DIR)/"
-	$(_C)install -m 644 "$(BUNDLE_DIR)/docs/"* "$(INSTALL_DOCS_DIR)"
-	$(_C)install -m 644 "$(BUNDLE_DIR)/COPYING" "$(INSTALL_DOCS_DIR)"
-	$(_C)install -m 644 "$(BUNDLE_DIR)/man/"*.1.gz "$(INSTALL_MAN_DIR)/"
+	$(_C)install -d "$(DESTDIR)$(bindir)"
+	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFCODEC)" "$(DESTDIR)$(bindir)/"
+	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFMERGE)" "$(DESTDIR)$(bindir)/"
+	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFDIFF)" "$(DESTDIR)$(bindir)/"
+	$(_C)install -m 755 "$(BUNDLE_DIR)/$(GRFID)" "$(DESTDIR)$(bindir)/"
+ifndef DO_NOT_INSTALL_DOCS
+	$(_C)install -d "$(DESTDIR)$(docdir)"
+	$(_C)install -m 644 "$(BUNDLE_DIR)/docs/"* "$(DESTDIR)$(docdir)"
+endif
+ifndef DO_NOT_INSTALL_CHANGELOG
+	$(_C)install -d "$(DESTDIR)$(docdir)"
+	$(_C)install -m 644 "$(BUNDLE_DIR)/changelog.txt" "$(DESTDIR)$(docdir)"
+endif
+ifndef DO_NOT_INSTALL_LICENSE
+	$(_C)install -d "$(DESTDIR)$(docdir)"
+	$(_C)install -m 644 "$(BUNDLE_DIR)/COPYING" "$(DESTDIR)$(docdir)"
+endif
+ifndef DO_NOT_INSTALL_MAN
+	$(_C)install -d "$(DESTDIR)$(man1dir)"
+	$(_C)install -m 644 "$(BUNDLE_DIR)/man/"*.1.gz "$(DESTDIR)$(man1dir)/"
+endif
 
 ### Packing the current bundle into several compressed file formats ###
 #
